--- a/ece15200_F21_Jacob_Wagner.vcxproj.filters
+++ b/ece15200_F21_Jacob_Wagner.vcxproj.filters
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="edms.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
